# outlier

./: .gitignore  LICENSE  Readme.md  outlier.py  pyproject.toml  test.py
outlier/: __init__.py  detector.py
