[project]
name = "outlier"
version = "0.1.0"
description = "A library for detecting and removing outliers"
authors = [
    { name = "Irsyad Damlis", email = "irsyad.damlis@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project.urls]
Homepage = "https://github.com/irsyaddamlis/outlier"